[package]
name = "veml6070"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/veml6070-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the VEML6070 UVA light sensor."
readme = "README.md"
keywords = ["light", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/veml6070-rs"
documentation = "https://docs.rs/veml6070"

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/veml6070-rs", branch = "master" }
coveralls = { repository = "eldruin/veml6070-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.2"

[profile.release]
lto = true
